add link to button

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           </div>
           
           <div class="action-buttons">
-            <a href="#" class="action-btn">HIRE HERO</a>
+            <a href="https://www.linkedin.com/in/legerjulien/" class="action-btn">HIRE HERO</a>
             <button class="action-btn flip-card">CHARACTER INFO</button>
           </div>
         </div>
